cm4all-beng-proxy (0.5.13) unstable; urgency=low

  * widget-registry: clear local_address in translate request

 --

cm4all-beng-proxy (0.5.12) unstable; urgency=low

  * response: pass the "Location" response handler
  * added support for multiple listener ports

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Jun 2009 23:34:55 +0200

cm4all-beng-proxy (0.5.11) unstable; urgency=low

  * build with autotools
  * use libcm4all-socket, GLib
  * Makefile.am: support out-of-tree builds
  * added optimized Debian package
  * tcache: fixed wrong assignment in VARY=HOST
  * translation: added request packet LOCAL_ADDRESS

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Jun 2009 15:42:12 +0200

cm4all-beng-proxy (0.5.10) unstable; urgency=low

  * widget-http: assign the "address" variable

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Jun 2009 18:38:58 +0200

cm4all-beng-proxy (0.5.9) unstable; urgency=low

  * tcache: fixed typo in tcache_string_match()
  * tcache: support VARY=SESSION
  * translate: added the INVALIDATE response packet
  * cache, session: higher size limits
  * widget-uri: separate query_string from path_info
  * widget-uri: ignore widget parameters in widget_external_uri()

 -- Max Kellermann <mk@cm4all.com>  Mon, 15 Jun 2009 17:06:11 +0200

cm4all-beng-proxy (0.5.8) unstable; urgency=low

  * handler: fixed double free bug in translate_callback()

 -- Max Kellermann <mk@cm4all.com>  Sun, 14 Jun 2009 19:05:09 +0200

cm4all-beng-proxy (0.5.7) unstable; urgency=low

  * forward the Content-Disposition header
  * handler: assign new session to local variable, fix segfault
  * handler: don't dereference the NULL session

 -- Max Kellermann <mk@cm4all.com>  Sun, 14 Jun 2009 13:01:52 +0200

cm4all-beng-proxy (0.5.6) unstable; urgency=low

  * widget-http: send the "Via" request header instead of "X-Forwarded-For"
  * proxy-handler: send the "Via" request header
  * widget-request: check the "path" argument before calling uri_compress()
